--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -33,8 +33,7 @@ li {
 .ligen {
   font-family: 'Montserrat', sans-serif;
 font-size: 26px;
-margin: 18px;
-}
+margin: 18px;}
 .gallery {
   display: flex;
   flex-wrap: wrap;
